# api

./: .gitignore  LICENSE.txt  Makefile  README.md  go.work  go.work.sum  package.json  proto-gen.sh
.github/: PULL_REQUEST_TEMPLATE  ci.yml  spellcheck.yml
.github/actions/setup-go/: action.yml
.github/actions/spelling/: allow.txt  excludes.txt  expect.txt
.github/workflows/: build-python-suite.yml  ci.yml  codeql.yml  spellcheck.yml  spelling.yml
bindings/golang/: Makefile  go.mod  go.sum  proto-gen.sh
doc/: Makefile  proto-gen-doc.sh
doc/md/: receptor_v1.md
doc/receptor_v1/: document.md  evidence.md  finding.md  receptor.md  struct.md
docs/: Makefile
docs/receptor_v1/: receptor.md
go/: LICENSE.txt  Makefile  README.md  go.mod  go.sum  proto-gen.sh
go/client/: ntrcedclient.go  random.go
go/cmd/: add_evidence.go  receptor.go  root.go  verify.go
go/config/: cert.go  log.go
go/examples/: Makefile
go/examples/bitbucket_receptor/: main.go  trr-receptorName.md
go/examples/bitbucket_receptor/receptorPackage/: receptorPackage.go  utils.go
go/examples/directory-receptor/: directory_receptor.go  main.go
go/examples/directory-receptor/generators/: credentials.go  directory.go  folder_size.go  list.go  list_all.go
go/examples/example_gitlab/: Makefile  main.go
go/examples/gitlab_receptor/: credentialInstructions.md  main.go  trr-gitlab.md
go/examples/gitlab_receptor/logging/: receptorLogging.go
go/examples/gitlab_receptor/receptorPackage/: receptorPackage.go  resources.go  utils.go
go/examples/gitlab_receptor/receptorPackage/resources/: trr-gitlab.md
go/examples/gitlab_receptor_old/: trr-gitlab.md
go/examples/multipart_usage/: go.mod  go.sum  main.go  multipart_data.txt  test1.csv  test2.docx
go/examples/trr-receptorName/: main.go  trr-receptorName.md
go/examples/trr-receptorName/logging/: receptorLogging.go
go/examples/trr-receptorName/receptorPackage/: LICENSE  receptorPackage.go  receptorPackage_test.go  utils.go  utils_test.go
go/pkg/printer/: printer.go  printers.go  string_converter.go
go/pkg/proto-utils/: message.go  tr_tag.go
go/pkg/reflect-utils/: utils.go
go/pkg/tabular/: markdown.go  markdown_test.go  table.go
go/receptor_sdk/: Makefile  helpers.go  receptor.go  reporter.go
go/receptor_sdk/client/: apiclient.go  client.go  random.go
go/receptor_sdk/client/mocks/: client_factory.go  receptor_client.go
go/receptor_sdk/cmd/: add_evidence.go  add_evidence_test.go  configure.go  descriptor.go  discover.go  evidenceinfo.go  fieldtag.go  instructions.go  log.go  logo.go  mock_receptor.go  receptor.go  report.go  root.go  scan.go  scan_test.go  services.go  utils.go  verify.go  verify_test.go
go/receptor_sdk/cmd/mocks/: receptor.go
go/receptor_sdk/config/: cert.go  log.go
go/receptor_sdk/multipartkit/: builder.go  reader.go
go/receptor_sdk/utils/: json.go
go/receptor_v1/: Makefile  document.pb.go  evidence.pb.go  finding.pb.go  receptor.go  receptor.pb.go  receptor_grpc.pb.go  receptor_test.go  struct.go  struct.pb.go  tabulator.go
make/: globals.mk  go_build_example.sh  license_header.sh
proto/receptor/: receptor.proto
proto/receptor_v1/: document.proto  evidence.proto  finding.proto  receptor.proto  struct.proto
proto/receptorv1/: receptor.proto
proto/v1/receptor/: receptor.proto
python/: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .tabignore  PyPI.md  build.py  proto-gen  pyproject.toml  run
python/docs/: conf.py  index.rst
python/src/api/receptor_v1/: receptor_pb2.py
python/src/trustero_api/receptor_v1/: receptor_pb2.py
python/tests/: test_import.py
web/: proto-gen.sh  tsconfig.json
