[tool.poetry]
name = "trustero_api"
version = "0.0.4"
description = "Trustero Receptor API Python Proto File Bindings"
authors = ["Alex Gonopolskiy <alex@trustero.com>"]
license = "Apache-2.0"
readme = "PyPI.md"
homepage = "https://pypi.org/project/python/"
repository = "https://github.com/trustalex/https://github.com/trustero/api"
include = [
   { path = 'Changelog', format = 'sdist' },
   { path = 'NOTICE', format = 'sdist' },
   { path = 'LICENSE', format = 'sdist' },
   { path = 'README.md', format = 'sdist' },
   { path = 'docs', format = 'sdist' },
   { path = 'tests', format = 'sdist' },
   { path = 'proto-gen', format = 'sdist' },
]
packages = [ 
   { include = "trustero_api", from = "src" },
]
classifiers=[
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: Apache Software License",
   "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
importlib-metadata = { version="^6.0.0", optional=true }
sphinx = { version="^6.1.3", optional=true }
sphinx-autoapi = { version="^2.0.1", optional=true }
protobuf = "^4.23.2"
types-protobuf = "^4.23.0.1"

[tool.poetry.extras]
docs = [ "importlib-metadata", "sphinx", "sphinx-autoapi" ]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-testdox = "^3.0.1"
coverage = "^6.5.0"
pylint = "^2.16.0"
pre-commit = "^3.1.0"
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
coveralls = "^3.3.1"
colorama = "~0, >=0.4.6"


[tool.black]
line-length = 132
target-version = ['py311']
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | \.poetry
  | build
  | dist
  | docs
  | notes
  | src/trustero_api/receptor_v1
)/
'''

[tool.isort]
profile = "black"
line_length = 132
skip_glob = [ "docs", "notes", "src/trustero_api/receptor_v1"]

[build-system]
requires = ["poetry>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"